--- a/project/projectnextgencss.css
+++ b/project/projectnextgencss.css
@@ -86,3 +86,23 @@ body {
 				  white-space: nowrap;
 				  text-overflow: ellipsis;
 			}
+			#display{
+				margin-top:10px;
+				height:500px;
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+				width: 75%;
+			}
+			.title{
+				font-size:45px
+			}
+			.heading{
+				font-size:75px;
+				font-weight: 700;
+			}
+			#title{
+				font-size:30px;
+				text-indent:40px;
+				margin-top:75px;
+			}
