--- a/project/projectnextgencss.css
+++ b/project/projectnextgencss.css
@@ -72,7 +72,7 @@ body {
 				color:lightgrey;
 				font-size:145%;
 				text-align: center;
-				margin-left:500px;
+				margin-left:350px;
 			}
 			#sectionTitle{
 				color:#F26363;
@@ -84,18 +84,18 @@ body {
 
 			#display{
 				margin-top:10px;
-				height:500px;
+				height:375px;
 				display: block;
 				margin-left: auto;
 				margin-right: auto;
-				width: 75%;
+				width: 85%;
 			}
 			.title{
 				font-size:40px;
 				
 			}
 			.heading{
-				font-size:50px;
+				font-size:40px;
 				font-weight: 700;
 			}
 			#title{
@@ -106,7 +106,7 @@ body {
 			p{
 				text-indent: 30px;
 				margin-left:10px;
-				font-size:35px;
+				font-size:40px;
 				
 			}
 			strong{
@@ -118,5 +118,7 @@ body {
 			}
 			
 			.container {
-				max-width: 1225px;
+				max-width: 1000px;
+				left:200px;
+				position:absolute;
 			}
