--- a/Next-Gen_VietNam-master/project/projectnextgencss.css
+++ b/Next-Gen_VietNam-master/project/projectnextgencss.css
@@ -1,29 +1,21 @@
 body {
 				margin:0;
 				left:240px;		
-				font-family:Times;
+				font-family: "Times New Roman", Times, serif;
+
 			}
+			.logo {width: 290px; height: 84px;;display:inline-block}
 			.icon-bar {
 				width: 100%;
-				background-color: grey;
 				overflow: auto;
 			}
 			.icon-bar a {
-				width: 11%;
+				width: 15%;
 				text-align: center;
-				padding: 4px 0;
+				padding: 19px 0;
 				transition: all 0.3s ease;
-				color: white;
-				font-size: 32px;
-				color: #f2f2f2;
 				text-decoration: none;
 				font-size: 30px;
-			}
-			.icon-bar a:hover {
-				background-color: #000;
-			}
-			.active {
-				background-color: #4CAF50;
 			}
 			#bg{
 				position:relative;
@@ -42,16 +34,17 @@ body {
 				background:black;
 				margin-top:100px;
 				color:white;
-				} h3
-			#section #img {
+				} 
+			#section .pImg {
 				max-width:300px;
 				max-height:200px;
+				position: relative;
 			}
 			#section #postHeader{
 				position:absolute;
 				color:blue;
 				text-decoration:none;
-				font-size:200%;
+				font-size:175%;
 				margin:0;
 				margin-left:5px;
 				cursor:pointer;
@@ -141,5 +134,20 @@ body {
 				transform: translate(-50%, -50%);
 			}
 			h3 { font-weight:normal; }
+			.container{
+				background:white;
+			}
+			.footer {
+				position: relative;
+				left: 0;
+				bottom: 0;
+				width: 100%;
+				color: black;
+				text-align: center;
+				background:lightgrey;
+			 }
+			.ref{
+			 text-align: center;	
+			}
 			
 			
