--- a/Next-Gen_VietNam-master/project/projectnextgencss.css
+++ b/Next-Gen_VietNam-master/project/projectnextgencss.css
@@ -17,16 +17,24 @@ body {
 				text-decoration: none;
 				font-size: 30px;
 			}
-			#bg{
-				position:relative;
-				text-align:center;
-				width:100%;
-				height:425px;
-				background-image: url('imgs/vietnam.png');
-				background-size: 100% 100%;	
-				margin-top:0px;
-				cursor: context-menu;
-				}
+			.carousel-item img{
+				opacity: 0.2;
+
+			}
+			.carousel-caption{
+				color:darkorange !important;
+				top:20%;
+				float:right !important;
+			}
+			.carousel-caption #title{
+				font-size:60px !important;
+				font-weight: 200px !important;
+				text-shadow: 1.5px 1.5px grey;
+			}
+			.carousel-caption #content{
+				font-size:30px !important;
+				text-shadow: 1px 1px grey;
+			}
 			#foot{
 				float:bottom;
 				width:100%;
@@ -149,5 +157,20 @@ body {
 			.ref{
 			 text-align: center;	
 			}
-			
+			#sc{
+				width:0;
+				position: sticky;
+				top:-125px;
+				right:1100px;
+				
+			}
+			#sc .icon{
+				max-height:75px;
+				max-width:75px;
+				margin-top:10px;
+				
+			}
+			#sc .icon:hover{
+				cursor: pointer;
+			}
 			
